infrastructure/oauth2-proxy/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
spec:
  parentRefs:
    - name: wac-hospital-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /authn
      backendRefs:
        - group: ""
          kind: Service
          name: oauth2-proxy
          port: 80
